[tool.poetry]
name = "nautc"
version = "0.1.0"
description = "<http://qaz.wtf/u/convert.cgi?text=nautc> Convert plain text (letters, sometimes numbers, sometimes punctuation) to obscure characters from Unicode."
authors = ["Nasy <nasyxx+python@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.21"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
nautc = "nautc:main"
