[tool.poetry]
name = "nautc"
version = "1.0.0"
description = "Convert plain text (letters, sometimes numbers, sometimes punctuation) to obscure but cool characters."
authors = ["Nasy <nasyxx+python@gmail.com>"]
include = ["txt.gz"]

[tool.poetry.dependencies]
python = "^3.6"
wisepy2 = "^1.1.1"

[tool.black]
line-length = 79

[tool.poetry.scripts]
nautc = "nautc:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
