[tool.pdm.build]
includes = ["txt.gz"]
[tool.mypy]
mypy_path = "./typings"
exclude = [
  "__pypackages__/",
  "./typings",  # for pyright autogen stubs
]

follow_imports_for_stubs = true
follow_imports = "silent"

disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false

disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

implicit_optional = true
strict_optional = true


warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
warn_return_any = false
warn_unreachable = true

ignore_errors = false

allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
implicit_reexport = true
strict_equality = true
strict = true

warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.12"
extraPaths = [
  "__pypackages__/3.11/lib",
  "__pypackages__/3.12/lib",
  "src",
]

exclude = [
    "**/__pycache__",
]

useLibraryCodeForTypes = true


[tool.ruff]

exclude = [ "./typings" ]

fix = false
unfixable = ["F401", "F841", "C417"]
output-format = "grouped"
# show-source = true

select = ["ALL"]
ignore = [
  "ANN101", "C417", "COM812", "D203", "D213", "D401", "E401",
  "FBT002", "EM102", "ERA001", "EXE001", "FBT001",
  "I001", "PD", "S101", "SLF001", "TRY003", "UP009",
  "EM101", "T201", "PGH003", "ISC001", "PLC3002"
]

indent-width = 2
# show-fixes = true

[tool.ruff.isort]
section-order = ["future", "standard-library", "first-party", "tf", "torch", "jax", "types", "math", "database", "third-party", "config", "local-folder"]

[tool.ruff.isort.sections]
database = ["lucene", "lupyne", "elasticsearch", "sqlite", "shelve"]
tf = ["tensorflow", "keras"]
torch = ["torch", "torchdata", "torchvision", "pytorch_lightning"]
jax = ["jax", "haiku", "flax", "optax", "jraph", "chex", "jaxopt", "equinox", "orbax"]
types = ["typing", "types", "jax.typing", "jaxtyping", "numpy.typing", "typing_extensions"]
math = ["numpy", "scipy", "sklearn", "pandas"]
config = ["config", "settings", "cfg", "smile_config", "tyro"]

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.ruff.per-file-ignores]
"__init__.py" = [ "D104" ]
"__version__.py" = [ "D100" ]
"sites/*.py" = [ "INP001" ]

[tool.ruff.pylint]
max-args = 10

[tool.ruff.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 15.
max-complexity = 15


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "nautc"
version = "1.1.1"
description = "Convert plain text (letters, sometimes numbers, sometimes punctuation) to obscure but cool characters."
authors = [
    {name = "Nasy", email = "nasyxx+python@gmail.com"},
]
dependencies = [
    "tyro>=0.7.3",
]
requires-python = "<4.0,>=3.10"
readme = "README.md"
license = {text = "MIT"}


[project.scripts]
nautc = "nautc:main"
